# membrane

./: .coderabbit.yaml  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  go.mod  go.sum
.github/workflows/: ci.yml  npm-publish.yml
api/grpc/: handlers.go  server.go  server_test.go
clients/openclaw/: README.md  openclaw.plugin.json  package.json  tsconfig.json
clients/python/: README.md  pyproject.toml
clients/python/membrane/: __init__.py  client.py  types.py
clients/python/membrane/v1/: __init__.py  membrane_pb2.py  membrane_pb2_grpc.py
clients/python/tests/: test_integration.py  test_types.py
clients/typescript/: LICENSE  README.md  package-lock.json  package.json  tsconfig.json  tsup.config.ts  vitest.config.ts
cmd/membraned/: main.go
docs/: index.md
docs/.vitepress/: config.mts  config.ts
docs/api/: go-packages.md  grpc.md
docs/guide/: concepts.md  consolidation.md  decay.md  deployment.md  examples.md  getting-started.md  ingestion.md  memory-types.md  retrieval.md  revision.md  security.md  troubleshooting.md
docs/internals/: architecture.md  metrics.md  storage.md
docs/reference/: configuration.md  rfc.md  schemas.md
pkg/consolidation/: competence.go  consolidation.go  episodic.go  plangraph.go  scheduler.go  semantic.go
pkg/decay/: curves.go  decay.go  scheduler.go
pkg/ingestion/: ingestion.go  policy.go
pkg/membrane/: config.go  membrane.go
pkg/metrics/: metrics.go
pkg/retrieval/: filter.go  trust.go
tests/: atomicity_test.go  eval_grpc_test.go  eval_revision_test.go  revision_test.go
(+31 files in other folders)
